--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
 }
 
 header * {
-    display: inline;
+    display: inline-block;
 }
 
 a:link, a:visited {
@@ -25,13 +25,23 @@ a:hover {
 
 header li {
     margin: 20px;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 header a {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 140px;
+    height: 25px;
+    background: whitesmoke;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: bold;
+    line-height: 25px;
+    text-decoration: none;
 }
 
 header img {
     height: 80px;
 }
+
