--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header a {
     font-family: Arial, Helvetica, sans-serif;
     width: 140px;
     height: 25px;
-    background: whitesmoke;
+    background: white;
     padding: 10px;
     text-align: center;
     border-radius: 5px;
